@@ -1,3 +1,5 @@
+2005/10/18 -- released version 20051018_trunk
+
 2005/10/17 -- released version 20051017_trunk
 
 2005/10/16 -- released version 20051016_trunk
